# snowball

./: .gitignore  Cargo.toml
client/: Cargo.toml  run.sh  wtf.sh
client/src/: lib.rs  main.rs
client/src/game/: game.rs  mod.rs
client/src/game/cursor/: cursor.rs
client/src/game/level/: level.rs
client/src/game/player/: camera_controller.rs  input.rs  mod.rs  player.rs  player_movement.rs  player_throw.rs
server/src/: main.rs
src/: lib.rs  main.rs  pause_screen.rs  view_model.rs
src/game/: game.rs  mod.rs
src/game/level/: level.rs
src/game/player/: camera_controller.rs  mod.rs  player.rs  player_movement.rs
src/game/ui/: debug_view.rs  mod.rs  ui.rs
