[package]
name = "snowball"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
bevy_rapier3d = "0.32.0"
color = "0.3.2"

[features]
# Use this to enable dynamic linking for Bevy dependencies in development
dynamic_linking = ["bevy/dynamic_linking"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
